Correction to datetime pickers (had to add z-index to position them above checkboxes)

--- a/public/css/trongate-datetime.css
+++ b/public/css/trongate-datetime.css
@@ -1,5 +1,6 @@
 .datepicker-calendar, .timepicker-popup, .datetime-picker-calendar {
     font-family: Lucida console;
+    z-index: 1;
 }
 
 .datepicker-calendar, .datetime-picker-calendar {
